welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(100)
 required: Boolean
  if (90 < n < 100 ||  190 < n < 210) {return true}
               ^nearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if (90 < n < 100 ||  190 < n < 210) {return true}
                                 ^